--- a/WebApplication1/Views/Shared/_LoggedLayout.cshtml
+++ b/WebApplication1/Views/Shared/_LoggedLayout.cshtml
@@ -91,6 +91,7 @@
     <!-- Main -->
     <main>
         @RenderBody()
+        @Html.Action("UserProfilePartial", "Home")
     </main>
 
     <!-- Footer -->
