--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,70 +1,16 @@
-﻿@using Microsoft.AspNet.Identity
-@using WebApplication1.Models;
-
-@{
-    ViewBag.Title = "Index";
+﻿@{
     Layout = "~/Views/Shared/_LoggedLayout.cshtml";
 }
-<div class="row profile hidden-xs">
-    <div class="col-md-3">
-        <div class="profile-sidebar">
-            <!-- SIDEBAR USERPIC -->
-            <div class="profile-userpic">
-                <img src="@ViewBag.Image" style="width:150px; height: 150px;"
-                     class="img-responsive" alt="" />
-            </div>
-            <!-- END SIDEBAR USERPIC -->
-            <!-- SIDEBAR USER TITLE -->
-            <div class="profile-usertitle">
-                <div class="profile-usertitle-name">
-                    @ViewBag.FirstName
-                    @ViewBag.LastName
-                </div>
-                <!--<div class="profile-usertitle-job">
-                    Developer
-                </div>-->
-            </div>
-            <!-- END SIDEBAR USER TITLE -->
-            <!-- SIDEBAR MENU -->
-            <div class="profile-usermenu">
-                <ul class="nav">
-                    <li>
-                        <a class="btn showdetails" data-toggle="collapse" data-target="#viewContent" href="#">
-                            <i class="glyphicon glyphicon-picture"></i>
-                            Content
-                        </a>
-                        <p class="collapse" id="viewContent" style="color: black;">
-                            Donec id elit non mi porta gravida at eget metus. Fusce dapibus,
-                            tellus ac cursus commodo, tortor mauris condimentum nibh, ut fer
-                            mentum massa justo sit amet risus. Etiam porta sem malesuada magna
-                            mollis euismod. Donec sed odio dui. 
-                      
-                        </p>
-                    </li>
-                    <li>
-                        <a class="btn showdetails" data-toggle="collapse" data-target="#viewInterests" href="#">
-                            <i class="glyphicon glyphicon-user"></i>
-                            Interests
-                        </a>
-                        <p class="collapse" id="viewInterests" style="color: black;">
-                            @{
-                        for (int i = 0; i < ViewBag.Interests.Length; i++)
-			            {
-                            @ViewBag.Interests[i]
-                            <br />
-			            }}
-                        </p>
-                    </li>
-                    <li>
-                        <a href="@Url.Action("Manage", "Account")">
-                            <i class=" glyphicon glyphicon-flag">
-                            </i>
-                            Account Settings
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <!-- END MENU -->
+
+<div>
+    <div style="width: 80%; float: right; padding-bottom: 100px;">
+        <div style="width: 50px; float: left;"></div>
+        <div style="width: 50px; float: right;"></div>
+        <div style="margin-left: 50px; margin-right: 50px;">
+            
+          Index
+
         </div>
     </div>
+
 </div>
