--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -3,12 +3,65 @@
 }
 
 <div>
-    <div style="width: 80%; float: right; padding-bottom: 100px;">
+    <div class="mainContainer">
         <div style="width: 50px; float: left;"></div>
         <div style="width: 50px; float: right;"></div>
         <div style="margin-left: 50px; margin-right: 50px;">
-            
-          Index
+
+            <p class="pageTitle">Stories</p>
+
+            <div class="post">
+                <div class="postHead">
+                    <img class="postImage" src="~/Content/Images/JohnDoe.png" />
+                    <p class="postName">
+                        <a class="postLink" href="">
+                            John Doe
+                        </a>
+                    </p>
+                        <p class="postDate">@DateTime.Now</p>
+                    <hr class="postHR" />
+                </div>
+                <div class="postBody">
+                    Lorem ipsum dolor sit amet, ea vidit impetus accusam vix.
+                     Ea vitae partem habemus cum, modo autem labore no vim, v
+                    im ei debet deserunt. Cu per enim aeque lucilius, adhuc ve
+                    rterem no has. Eu vix minim suscipiantur. Semper inciderint quo ex.
+
+                </div>
+                <div class="postFooter">
+                    <hr class="footerHR"/>
+                    <a href=""><i style="color:green;" id="thumbs" class="glyphicon glyphicon-thumbs-up"></i></a>
+                    <a href=""><i style="color:red;" id="thumbs" class="glyphicon glyphicon-thumbs-down"></i></a>
+                 </div>
+                <div class="likes">
+                    +1
+                </div>
+            </div>
+
+            <div class="post">
+                <div class="postHead">
+                    <img class="postImage" src="~/Content/Images/JohnDoe.png" />
+                    <p class="postName">
+                        <a class="postLink" href="">
+                            Tom Sawyer
+                        </a>
+                    </p>
+                    <p class="postDate">@DateTime.Now</p>
+                    <hr class="postHR" />
+                </div>
+            </div>
+            <div class="post">
+                <div class="postHead">
+                    <img class="postImage" src="~/Content/Images/JohnDoe.png" />
+                    <p class="postName">
+                        <a class="postLink" href="">
+                            Jane Doe
+                        </a>
+                    </p>
+                    <p class="postDate">@DateTime.Now</p>
+                    <hr class="postHR" />
+                </div>
+            </div>
 
         </div>
     </div>
