--- a/WebApplication1/Views/Shared/_LoggedLayout.cshtml
+++ b/WebApplication1/Views/Shared/_LoggedLayout.cshtml
@@ -71,12 +71,16 @@
                     <li class="page-scroll">
                         <div class="col-lg-6">
                             <div class="input-group">
-                                <input id="searchBar" type="text" class="form-control" placeholder="Search...">
-                            </div>
+                                @using (Html.BeginForm("Search", "Home", FormMethod.Post))
+                                { 
+                                <input name="search" id="searchBar" type="text" class="form-control" placeholder="Search...">
+                                <button id="searchBtn" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                }
+                           </div>
                         </div>
                     </li>
                     <li class="page-scroll">
-                        <a href="#">Find</a>
+                        <a href=@Url.Action("frndify", "Home")>frndify</a>
                     </li>
                     <li class="page-scroll">
                         @Html.Partial("_LoginPartial", new WebApplication1.Models.LoginViewModel())
