Added friend implemntation, posts

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using WebApplication1.Models
+@{
     Layout = "~/Views/Shared/_LoggedLayout.cshtml";
 }
 
@@ -10,60 +11,64 @@
 
             <p class="pageTitle">Stories</p>
 
+            @for(int i = 0; i < ViewBag.Posts.Count; i++)
+            { 
             <div class="post">
                 <div class="postHead">
-                    <img class="postImage" src="~/Content/Images/JohnDoe.png" />
+                    <img class="postImage" src="@ViewBag.ImageMap[ViewBag.Users[i]]" />
                     <p class="postName">
-                        <a class="postLink" href="">
-                            John Doe
+                        <a class="postLink" href=@Url.Action("UserPage", "Home", new { userName = ViewBag.Users[i].UserName })>
+                            @ViewBag.Users[i].FirstName
+                            @ViewBag.Users[i].LastName
                         </a>
                     </p>
-                        <p class="postDate">@DateTime.Now</p>
+                        <p class="postDate">@ViewBag.Posts[i].DateTime</p>
                     <hr class="postHR" />
                 </div>
                 <div class="postBody">
-                    Lorem ipsum dolor sit amet, ea vidit impetus accusam vix.
-                     Ea vitae partem habemus cum, modo autem labore no vim, v
-                    im ei debet deserunt. Cu per enim aeque lucilius, adhuc ve
-                    rterem no has. Eu vix minim suscipiantur. Semper inciderint quo ex.
-
+                    @ViewBag.Posts[i].PostContent
                 </div>
                 <div class="postFooter">
                     <hr class="footerHR"/>
-                    <a href=""><i style="color:green;" id="thumbs" class="glyphicon glyphicon-thumbs-up"></i></a>
-                    <a href=""><i style="color:red;" id="thumbs" class="glyphicon glyphicon-thumbs-down"></i></a>
+                    <a href=""><i id="thumbsUp" class="glyphicon glyphicon-thumbs-up"></i></a>
+                    <a href=""><i id="thumbsDown" class="glyphicon glyphicon-thumbs-down"></i></a>
                  </div>
                 <div class="likes">
                     +1
                 </div>
+                @if (ViewBag.Posts[i].PostFile != null)
+                {
+                    byte[] bytes = ViewBag.Posts[i].PostFile;
+                    string imageBase64Data = Convert.ToBase64String(bytes);
+                    string imageDataURL = string.Format("data:image/png;base64,{0}", imageBase64Data);
+                        
+               <a href="#"  data-toggle="modal" data-picture-id="@imageDataURL" data-target="#ViewPictureModal"><i id="postFile" style="color: black;" class="glyphicon glyphicon-paperclip"></i></a>
+                }
+                else
+                {
+                    <a href=""><i id="postFile" style="color: lightgray; pointer-events: none; cursor: default;" class="glyphicon glyphicon-paperclip"></i></a>
+                }
             </div>
-
-            <div class="post">
-                <div class="postHead">
-                    <img class="postImage" src="~/Content/Images/JohnDoe.png" />
-                    <p class="postName">
-                        <a class="postLink" href="">
-                            Tom Sawyer
-                        </a>
-                    </p>
-                    <p class="postDate">@DateTime.Now</p>
-                    <hr class="postHR" />
-                </div>
-            </div>
-            <div class="post">
-                <div class="postHead">
-                    <img class="postImage" src="~/Content/Images/JohnDoe.png" />
-                    <p class="postName">
-                        <a class="postLink" href="">
-                            Jane Doe
-                        </a>
-                    </p>
-                    <p class="postDate">@DateTime.Now</p>
-                    <hr class="postHR" />
-                </div>
-            </div>
-
+            }
         </div>
     </div>
 
 </div>
+
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" id="ViewPictureModal">
+    <div class="modal-dialog modal-lg">
+        <div id="newStoryModal" class="modal-content">
+            <img id="postPicture" class="picture" src=""/>
+        </div>
+    </div>
+</div>
+
+<script>
+    $('#ViewPictureModal').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget) 
+        var image = button.data('picture-id')
+
+        var modal = $(this)
+        modal.find('.picture').attr("src", image)
+    })
+</script>
