--- a/WebApplication1/Content/frndly.css
+++ b/WebApplication1/Content/frndly.css
@@ -776,7 +776,7 @@ h4.formLabel{
 }
 
 .mainContainer{
-    width: 80%; 
+    width: 82%; 
     float: right;
      padding-bottom: 100px;
      min-height:800px;
@@ -800,8 +800,8 @@ h4.formLabel{
 #friendPage{
 
     float: right;
-  margin-top: -373px;
-  margin-right: 270px;
+     margin-top: -93px;
+  margin-right: 220px;
 }
 
 .searchLink, .searchLink:focus, searchLink:hover{
@@ -836,31 +836,48 @@ h4.formLabel{
 }
 
 .postHR{
-    margin-top: 15px;
+    margin-top: 18px;
 }
 
 .postLink, .postLink:hover{
         color:gray!important;
+        margin-left: 8px;
 }
 
 .postDate{
     max-width: 164px;
   margin-left: 233px;
-  padding-top: 15px;
-  font-size: 16px;
+  padding-top: 18px;
+  font-size: 12px;
 }
 
 .postBody{
-      max-height: 115px;
+    min-height: 136px;
+  max-height: 115px;
   overflow: auto;
-  padding:5px;
+  padding: 11px;
   text-align: left;
+  margin-top: -20px;
 }
 
-#thumbs{
+#thumbsUp{
+    color: lightgray;
     float: left;
   margin-left: 10px;
   margin-top: 5px;
+}
+ #thumbsDown{
+       color: lightgray;
+    float: left;
+  margin-left: 10px;
+  margin-top: 5px;
+ }
+
+#thumbsUp:hover{
+    color:mediumblue;
+}
+#thumbsDown:hover{
+    color:red;
 }
 
 .footerHR{
@@ -871,4 +888,49 @@ h4.formLabel{
       float: left;
   margin-top: 1px;
   margin-left: 10px;
+}
+
+#postFile{
+    float: right;
+  margin-top: 5px;
+  margin-right: 10px;
+}
+
+#newStoryBtn{
+    background-color: rgb(71, 94, 124);
+  border-color: rgb(71, 94, 124);
+}
+
+#profileList{
+
+    margin-top:-10px;
+}
+
+#newStoryModal{
+
+      color: black;
+  padding: 15px;
+}
+
+.newPostTextArea{
+      margin: 0px;
+  width: 570px;
+  height: 250px;
+  resize: none;
+}
+
+#btnCreateStory{
+
+  margin-left:  7.666667% !important;
+}
+
+#postFileLabel{
+      padding: 0;
+  padding-right: 30px;
+}
+
+#postPicture{
+    max-width: 100% !important;
+  width: auto !important;
+  height: auto !important;
 }
